# GridWatch

./: README.md
infra/: .env.dev  microservices-docker-compose.yml
microservices/authentication/: dockerfile  pyproject.toml
microservices/authentication/authentication/: settings.py  urls.py
microservices/authentication/authenticator/management/commands/: initadmin.py
microservices/grid/: dockerfile  pyproject.toml
microservices/grid/grid/: asgi.py  settings.py  urls.py  wsgi.py
