[project]
name = "authentication"
version = "0.1.0"
description = "Authentication and user management Microservice"
authors = [
    {name = "erwandarves",email = "erwan.darves@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "channels (>=4.3.1,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
